# churn-rate-prediction-model

./: main.py  pyproject.toml
src/churn_analysis/config/: settings.py
src/churn_analysis/visualization/: display_utils.py
src/data/loaders/: loaders.py
src/notebooks/: 01_data_exploration.ipynb
src/notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb
src/outputs/reports/: 01_executive_summary_eda.md
src/scripts/: download_data.py
